week3/style.css
* {
    font-family: 'Courier New', Courier, monospace;
    outline: 1px solid red;
    outline-offset: -1px;
    color: white;
    scroll-behavior: smooth;
}

body {
    background-color: rgba(25, 25, 25, 1);
    /* overflow-x: hidden; */
    margin: 0;
}

header {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 80%;
    margin: auto;
}

header span {
    color: #fff01f;
    font-size: 2rem;
}

header span:hover {
    text-shadow: 0px 0px 25px white;
    transition-duration: 250ms;
    transition-timing-function: ease-in-out;
}


header img {
    padding: 40px;
    width: 33vw;
}

header #header-right {
    vertical-align: center;
}

header #header-right p {
    color: white;
}

nav {
    position: sticky;
    top: 0px;
    display: flex;
    justify-content: center;
    backdrop-filter: blur(2px);
    z-index: 1; /* <1 puts it behind blockquote */
}

nav ul {
    padding: 0px;
}

nav li {
    text-align: center;
    width: 5rem;
    display: inline-block; 
}

nav li a {
    text-decoration: none;
}

nav li a:hover {
    color: #fff01f;
    text-shadow: 0px 0px 15px  #fff01f;
    transition-duration: 250ms;
}

section {
    margin-top: 64px;
    margin-bottom: 64px;
}

table, th, td {
    border-collapse: collapse;
}

table {
    /* font-size: 1.2rem; */
    width: 100%;
}

th, td {
    padding: 25px;
}

th {
    color:#fff01f;
    font-weight: bold;
    text-transform: uppercase;
}
td {
    text-align: center;
}   

th:hover, td:hover {
    background-color: rgba(255, 255, 255, .1);
    transition-duration: 50ms;
    transition-timing-function: ease-in-out;
}

#section-1::before {
    /* Fake Circle */
    content: "";
    position: absolute;
    z-index: -1;
    width: 65vw;
    aspect-ratio: 1;
    top: 25vh;
    left: -20vw;
    display: block;
    border-radius: 50%;
    background-color: rgba(255, 255, 255, .05);
    outline: 8rem rgba(255, 255, 255, .05) solid;
}

/* #circle-2::before {
    content: "";
    transform: rotate(var(--rotation));
    position: relative;
    z-index: -1;
    width: 500px;
    height: 1000px;
    left: 50vw;
    border-radius: 50%;
    border: 4rem rgba(255, 255, 255, .05) dotted;
}  */


blockquote {
    display: block;
    padding-top: 32px;
    padding-bottom: 32px;
    background-color: rgba(0, 0, 0, .25);
    font-size: 1.2rem;
    text-align: center;
    margin: 0;
    backdrop-filter: blur(4px);
}

blockquote footer {
    text-align: right;
}

#up-arrow i {
    justify-self: center;
    color: white;
}

#up-arrow p {
    text-align: center;
    font-size: 2rem;
}

#up-arrow p:hover {
    color: #fff01f;
    text-shadow: 0px 0px 25px  #fff01f;
    transition-duration: 250ms;
}

footer#contact {
    padding: 32px;
    background-color: black;
    color: red;
    display: flex;
    gap: 64px;;
}

footer#contact div {
    min-width: 50vw;
    max-width: 30%;
    text-align: left;
}

footer ul {
    float: right;
    list-style-type: none;
    margin: 1rem 0 0 0 ;
    padding: 0;
}


/* Classes */

section.space {
    height: 1000px;
}

.col {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
}

/* Media */

@media only screen and (max-width: 1000px) {
    header {
        flex-direction: column;
    }
    header#header-left {
        width: 100%;
    }
    footer#contact {
        flex-direction: column;
    }
    footer#contact div {
        min-width: 100%;
        max-width: 100%;
        text-align: center;
    }
    footer#contact ul li {
        display: inline;
        text-align: center;
    }
    footer#contact ul {
        text-align: center;
    }
    th, td {
        padding: 25px 0px 25px 0px;
    }
    #real-circle::after {
        content: "";
    }
}

